...
                                    <action selector="jump:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qE4-6M-eTa"/>
                                </connections>
                            </button>
                            <button opaque="NO" tag="102" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eUU-Kt-Rir">
                                <rect key="frame" x="164" y="318" width="46" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="UI测试"/>
                                <connections>
                                    <action selector="jump:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NMo-33-L86"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
